--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "author": "George Hertz",
   "license": "MIT",
   "dependencies": {
+    "@fidm/x509": "^1.2.1",
+    "buffer-json": "^2.0.0",
+    "date-fns": "^2.24.0",
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "lodash": "^4.17.21",
+    "pug": "^3.0.2",
+    "tslib": "^2.3.1",
+    "decoders": "^1.25.3"
   },
   "scripts": {
     "build": "tsc",
@@ -14,7 +20,9 @@
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
+    "@types/buffer-json": "^2.0.0",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.173",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
