--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,18 @@
 {
-  "extends": [
-    "config:base"
-  ]
+    "assigneesFromCodeOwners": true,
+    "packageRules": [{
+            "matchPackagePatterns": ["*"],
+            "matchUpdateTypes": ["minor", "patch"],
+            "groupName": "all non-major dependencies",
+            "groupSlug": "all-minor-patch",
+            "automerge": false,
+            "approvals_required": true,
+            "labels": ["dependencies"]
+        },
+        {
+            "matchPackagePatterns": ["*"],
+            "matchUpdateTypes": ["major"],
+            "labels": ["dependencies", "breaking"]
+        }
+    ]
 }
