--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,7 @@
 {
+    "extends": [
+        ":semanticCommits"
+    ],
     "assigneesFromCodeOwners": true,
     "packageRules": [{
             "matchPackagePatterns": ["*"],
