--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "dev": "ts-node src/index.ts"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.1",
+    "@tsconfig/node16": "^1.0.2",
     "@types/buffer-json": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.173",
+    "@types/node": "^16.10.2",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
